# hackernews-mcp

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: claude-desktop.md
examples/: 01-tech-trend-research.md  02-ask-hn-deep-dive.md  03-comparative-analysis.md  04-tool-composition.md  README.md
src/hackernews_mcp/: __init__.py  __main__.py  algolia.py  errors.py  models.py  server.py  thread.py
tests/: conftest.py  test_http.py  test_live.py  test_scaffold.py  test_search.py  test_server.py  test_thread.py
tests/fixtures/: error_response.json  search_empty.json  search_malformed.json  search_multi.json  thread_small.json
