[project]
name = "hackernews-mcp"
version = "0.0.1"
description = "An MCP server exposing Hacker News search and thread tools, backed by HN's Algolia API."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Charles Cozad", email = "ccozad@gmail.com" }]
keywords = ["mcp", "hacker-news", "algolia", "llm", "claude"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
    "anyio>=4.0",
]

[project.urls]
Homepage = "https://github.com/ccozad/hackernews-mcp"
Repository = "https://github.com/ccozad/hackernews-mcp"

[project.scripts]
hackernews-mcp = "hackernews_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "pyright>=1.1.380",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hackernews_mcp"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=hackernews_mcp --cov-report=term-missing --cov-fail-under=85"

[tool.coverage.run]
source = ["hackernews_mcp"]
omit = ["*/__main__.py"]

[tool.coverage.report]
exclude_also = ["if __name__ == .__main__.:"]
